--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/user-event": "^14.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
